--- a/_config.yml
+++ b/_config.yml
@@ -11,14 +11,14 @@ brief-intro:
 home-welcome:
 small-welcome:
 baseurl: "" # the subpath of your site, e.g. /blog
-url: "https://shizhenmin.github.io" # the base hostname & protocol for your site
+url: "https://I-love-bugs.github.io" # the base hostname & protocol for your site
 
 permalink: /:year/:month/:day/:title/
 
 # other links
 twitter_username: 
 facebook_username: 
-github_username: shizhenmin
+github_username: I-love-bugs
 email: 
 weibo_username: 
 zhihu_username: 
